# ChainBench

./: .gitignore  .gitmodules  README.md  index.html  pyproject.toml
chainbench/: __init__.py  cli.py
chainbench/eval/: README.md  cli.py  config.py  holdout_protocols.py  rows.py  runner.py  runtime_support.py  sample_ratio.py  views.py
chainbench/lib/: __init__.py  audio.py  chain_families.py  chain_keys.py  cli.py  conda.py  config.py  execution.py  proc.py  structural_metadata.py  summary.py
chainbench/stage1/: __init__.py  cli.py  curation.py  manifest.py
chainbench/stage2/: __init__.py  cli.py  render.py  validation.py
chainbench/stage3/: __init__.py  cli.py  collect.py  execution.py  jobs.py  postprocess.py  worker.py
chainbench/stage4/: chains.py  cli.py  execution.py  render.py
chainbench/stage5/: cli.py  execution.py  export.py  metadata.py  reporting.py  validate.py
config/: eval.json  eval_baselines.json  eval_template_holdout.json  stage3.json  stage4_delivery_chain_rendering.json  stage5_validation_packaging.json
docs/: construction.md  evaluation.md
paper/: main.tex
paper/sec/: appendix.tex  benchmark.tex  conclusion.tex  experiments.tex  introduction.tex  related_work.tex
scripts/: run_eval.py  run_stage1.py  run_stage2.py  run_stage3.py  run_stage3_batch_runner.py  run_stage4.py  run_stage5.py
scripts/eval/: README.md  __init__.py  app.py  cli.py  config.py  export_preservation_stats.py  generalization.py  metrics.py  native_runtime.py  progress.py  row_utils.py  shared.py  tasks.py  views.py
scripts/lib/: __init__.py  config.py  (+3 more)
(+131 files in other folders)
