[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ChainBench"
version = "0.1.0"
description = "ChainBench data pipeline and evaluation tooling."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "huggingface_hub",
    "loguru",
    "numpy",
    "PyYAML",
    "pyroomacoustics",
    "scikit-learn",
    "scipy",
    "soundfile",
    "tqdm",
]

[project.optional-dependencies]
torch = [
    "torch",
    "torchaudio",
]

[project.scripts]
chainbench = "chainbench.cli:main"

[tool.setuptools.packages.find]
include = ["chainbench*"]

